--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
         <item>CMD_LED</item>
         <item>CMD_ANALOG</item>
         <item>CMD_HCSR04</item>
+        <item>CMD_RFT1</item>
     </string-array>
 
 </resources>
